[gd_scene load_steps=16 format=3 uid="uid://i7mvbsy1s34q"]

[ext_resource type="Script" path="res://MultiplayerJargon/MultplayerTest.gd" id="3_o2mgw"]
[ext_resource type="Script" path="res://UI/menu.gd" id="3_ysm53"]
[ext_resource type="Script" path="res://UI/Transition.gd" id="4_d5tsa"]
[ext_resource type="Script" path="res://Levels/Level_swap.gd" id="4_wtmqh"]
[ext_resource type="PackedScene" uid="uid://bujc3kdcq2v58" path="res://UI/Character_block.tscn" id="5_n7qw0"]
[ext_resource type="PackedScene" uid="uid://bot68tj8cqwek" path="res://fmodstuff/MusicManager/music_c.tscn" id="6_so81q"]

[sub_resource type="Animation" id="Animation_uour8"]
resource_name = "Menu"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main/Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(317, 325)]
}

[sub_resource type="Animation" id="Animation_nvhyi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main/Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(317, 325)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q6gix"]
_data = {
"Menu": SubResource("Animation_uour8"),
"RESET": SubResource("Animation_nvhyi")
}

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_3i5o8"]
states/Start/position = Vector2(203, 100)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_o1fnw"]
properties/0/path = NodePath("select/HBoxContainer:alignment")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/replication_mode = 1

[sub_resource type="Animation" id="Animation_pnpsn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_2y5jp"]
resource_name = "close"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.594604, 0.63728),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1e-05)]
}

[sub_resource type="Animation" id="Animation_d2klf"]
resource_name = "open"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(3.13834, 3.13834),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h45ca"]
_data = {
"RESET": SubResource("Animation_pnpsn"),
"close": SubResource("Animation_2y5jp"),
"open": SubResource("Animation_d2klf")
}

[node name="Director" type="Node2D"]

[node name="Multplayer" type="Node2D" parent="."]
script = ExtResource("3_o2mgw")
container = ExtResource("5_n7qw0")

[node name="LevelSpawner" type="MultiplayerSpawner" parent="Multplayer"]
_spawnable_scenes = PackedStringArray("res://Levels/level_test.tscn", "res://Levels/level_rotation/level_1.tscn", "res://Levels/level_rotation/level_2.tscn")
spawn_path = NodePath("../Level")

[node name="ui" type="MultiplayerSpawner" parent="Multplayer"]
_spawnable_scenes = PackedStringArray("res://UI/Character_block.tscn")
spawn_path = NodePath("Menu/select/HBoxContainer")

[node name="Menu" type="Control" parent="Multplayer/ui"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_ysm53")
container = ExtResource("5_n7qw0")
metadata/_edit_lock_ = true

[node name="AnimationTree" type="AnimationTree" parent="Multplayer/ui/Menu"]
libraries = {
"": SubResource("AnimationLibrary_q6gix")
}
tree_root = SubResource("AnimationNodeStateMachine_3i5o8")
anim_player = NodePath("../AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Multplayer/ui/Menu"]
libraries = {
"": SubResource("AnimationLibrary_q6gix")
}

[node name="select" type="Control" parent="Multplayer/ui/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 483.0
offset_top = 2.0
offset_right = 483.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Multplayer/ui/Menu/select"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -77.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="Multplayer/ui/Menu/select"]
layout_mode = 0
offset_left = 9.0
offset_top = 228.0
offset_right = 115.0
offset_bottom = 259.0
text = "START GAME"

[node name="OptionButton" type="OptionButton" parent="Multplayer/ui/Menu/select"]
layout_mode = 0
offset_left = 124.0
offset_top = 228.0
offset_right = 255.0
offset_bottom = 259.0
item_count = 1
selected = 0
popup/item_0/text = "select level"
popup/item_0/id = 0

[node name="Main" type="Control" parent="Multplayer/ui/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="Multplayer/ui/Menu/Main"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 317.0
offset_top = 325.0
offset_right = 317.0
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.982397, 1.1355)

[node name="Host" type="Button" parent="Multplayer/ui/Menu/Main/Control"]
layout_mode = 0
offset_left = -221.906
offset_top = -105.68
offset_right = -175.906
offset_bottom = -74.6803
scale = Vector2(2.66012, 1.21663)
text = "Host"

[node name="Join" type="Button" parent="Multplayer/ui/Menu/Main/Control"]
layout_mode = 0
offset_left = -64.1289
offset_top = -103.919
offset_right = -18.1289
offset_bottom = -72.919
scale = Vector2(2.83005, 1.29435)
text = "Join
"

[node name="TextEdit" type="TextEdit" parent="Multplayer/ui/Menu/Main/Control"]
layout_mode = 0
offset_left = -4.07168
offset_top = -131.22
offset_right = 301.928
offset_bottom = -91.2193
scale = Vector2(0.51929, 0.51929)
text = "66.242.81.85"
placeholder_text = "66.242.81.85"

[node name="PortForward" type="Button" parent="Multplayer/ui/Menu/Main/Control"]
layout_mode = 0
offset_left = -271.784
offset_top = -132.1
offset_right = -81.7842
offset_bottom = -101.1
scale = Vector2(1.3055, 0.597082)
text = "PortForward(if you can)"

[node name="SteamHost" type="Button" parent="Multplayer/ui/Menu/Main/Control"]
texture_filter = 1
layout_mode = 0
offset_left = -310.465
offset_top = -280.934
offset_right = -214.465
offset_bottom = -249.934
scale = Vector2(1.35177, 0.794036)
text = "Steam host"

[node name="LobbyContainer" type="ScrollContainer" parent="Multplayer/ui/Menu/Main/Control"]
layout_mode = 0
offset_left = -79.3976
offset_top = -275.65
offset_right = 559.602
offset_bottom = 33.35
scale = Vector2(0.368744, 0.368744)

[node name="Lobbies" type="VBoxContainer" parent="Multplayer/ui/Menu/Main/Control/LobbyContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="check lobbies" type="Button" parent="Multplayer/ui/Menu/Main/Control"]
layout_mode = 0
offset_left = -308.429
offset_top = -247.468
offset_right = -181.429
offset_bottom = -216.468
scale = Vector2(1.04183, 1.04183)
text = "Check Lobbiess"

[node name="Start" type="Control" parent="Multplayer/ui/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 278.0
offset_right = 3.0
offset_bottom = 278.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="Button" type="Button" parent="Multplayer/ui/Menu/Start"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -99.42
offset_top = -98.0
offset_right = 103.58
offset_bottom = -67.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(105.42, 17)
text = "Press Any Button to Start"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="Multplayer/ui/Menu"]
replication_config = SubResource("SceneReplicationConfig_o1fnw")

[node name="Transition" type="Control" parent="Multplayer/ui"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("4_d5tsa")

[node name="ColorRect" type="ColorRect" parent="Multplayer/ui/Transition"]
z_index = 4
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(1, 150)
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Animation_Transition" type="AnimationPlayer" parent="Multplayer/ui/Transition"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_h45ca")
}
autoplay = "close"

[node name="Level" type="Node2D" parent="Multplayer"]
unique_name_in_owner = true
script = ExtResource("4_wtmqh")

[node name="MusicC" parent="." instance=ExtResource("6_so81q")]

[connection signal="pressed" from="Multplayer/ui/Menu/select/Button" to="Multplayer/ui/Menu" method="_start_game"]
[connection signal="item_selected" from="Multplayer/ui/Menu/select/OptionButton" to="Multplayer/ui/Menu" method="_on_option_button_item_selected"]
[connection signal="pressed" from="Multplayer/ui/Menu/Main/Control/Host" to="Multplayer/ui/Menu" method="set_character" binds= ["host"]]
[connection signal="pressed" from="Multplayer/ui/Menu/Main/Control/Join" to="Multplayer/ui/Menu" method="set_character" binds= ["join"]]
[connection signal="pressed" from="Multplayer/ui/Menu/Main/Control/PortForward" to="Multplayer" method="_on_port_forward_pressed"]
[connection signal="pressed" from="Multplayer/ui/Menu/Main/Control/SteamHost" to="Multplayer/ui/Menu" method="set_character" binds= ["steam_host"]]
[connection signal="pressed" from="Multplayer/ui/Menu/Main/Control/check lobbies" to="Multplayer" method="_steam_setup" binds= ["check_lobbies"]]
